--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
 <head>
 	<meta charset="utf-8">
-	<title></title>
+	<title>Memory Game</title>
+	<link rel="stylesheet" href="style.css"></link>
+	<script src='app.js'></script>
 </head>
 <body>
-
+	<h2>Score: <span id="result"></span></h2>
+	<div class="grid">
+	</div>
+	<div>
+		<h1 class="ttl"> Memory Game </h1>
+	</div>
 </body>
 </html>
